GNOME Bugzilla – Bug 631641
SoupCookieJarText, delete_cookie() is broken
Last modified: 2010-10-14 19:32:11 UTC
When an expired cookie is found, all subsequent cookies in the cookie file are deleted. This is because `line` variable isn't set if a parsed cookie is NULL (an expired cookie is). Result is, the `for` repeats parse_line for an expired cookie line over and over again, until `p` reaches \0. I attach a patch that fixes the bug.
Created attachment 171921 [details] [review] Proposed patch
just moving "line = p + 1;" to after the parse_cookie line should also work, right?
Yes, it is as equally sufficient.
fixed in master (will go into 2.32.1 in a month or so)