SoupCookieJarText: fix a bug when deleting a cookie

based on a patch from Michał Kazior

https://bugzilla.gnome.org/show_bug.cgi?id=631641